force-app/main/default/objects/APTS_Integration_Transaction__c/APTS_Integration_Transaction__c.object-meta.xml
<CustomObject>
    <description>Holds transactional data (details like request data, response data, status, etc..) for each webservice invocation</description>
    <label>Integration Transaction</label>
    <nameField>
        <displayFormat>TXN-{0000000000}</displayFormat>
        <label>Integration Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>