force-app/main/default/objects/APTS_Integration_Transaction__c/fields/APTS_Error_Code_Repository__c.field-meta.xml
<CustomField>
    <fullName>APTS_Error_Code_Repository__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Looks upto error code maintained in &apos;Error Code Master&apos; object</description>
    <label>Error Code Repository</label>
    <referenceTo>APTS_Error_Code_Repository__c</referenceTo>
    <relationshipLabel>Integration Transactions</relationshipLabel>
    <relationshipName>APTS_IntegrationTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>