force-app/main/default/objects/APTS_Integration_Transaction__c/fields/APTS_Integration_Repository__c.field-meta.xml
<CustomField>
    <fullName>APTS_Integration_Repository__c</fullName>
    <description>Logs transaction messages for each web service invocation tracked under Integration Master</description>
    <label>Integration Repository</label>
    <referenceTo>APTS_Integration_Repository__c</referenceTo>
    <relationshipLabel>Integration Transactions</relationshipLabel>
    <relationshipName>APTS_IntegrationTransactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>