force-app/main/default/objects/APTS_Integration_Transaction__c/fields/APTS_Perform_Retry__c.field-meta.xml
<CustomField>
    <fullName>APTS_Perform_Retry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Perform Retry</label>
    <type>Checkbox</type>
</CustomField>