force-app/main/default/objects/APTS_Integration_Transaction__c/fields/APTS_Request_Parameters__c.field-meta.xml
<CustomField>
    <fullName>APTS_Request_Parameters__c</fullName>
    <description>Parameters sent in request during call out</description>
    <label>Request Parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>