force-app/main/default/objects/APTS_Integration_Transaction__c/fields/APTS_Request_Payload__c.field-meta.xml
<CustomField>
    <fullName>APTS_Request_Payload__c</fullName>
    <description>It represents actual request data being sent to target system</description>
    <label>Request Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>