force-app/main/default/objects/APTS_Integration_Transaction__c/fields/APTS_Request_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>APTS_Request_Timestamp__c</fullName>
    <description>It represents date/time of request sent to target system</description>
    <label>Request Timestamp</label>
    <type>DateTime</type>
</CustomField>