force-app/main/default/objects/APTS_Integration_Transaction__c/fields/APTS_Response_Parameters__c.field-meta.xml
<CustomField>
    <fullName>APTS_Response_Parameters__c</fullName>
    <description>Response parameters provided by web service</description>
    <label>Response Parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>