force-app/main/default/objects/APTS_Integration_Transaction__c/fields/APTS_Response_Payload__c.field-meta.xml
<CustomField>
    <fullName>APTS_Response_Payload__c</fullName>
    <description>Represents actual response data provided by target system</description>
    <label>Response Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>