force-app/main/default/objects/APTS_Integration_Transaction__c/fields/APTS_Response_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>APTS_Response_Timestamp__c</fullName>
    <description>Represents date/time when response is received from target system</description>
    <label>Response Timestamp</label>
    <type>DateTime</type>
</CustomField>