force-app/main/default/objects/APTS_Integration_Transaction__c/fields/APTS_Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>APTS_Stack_Trace__c</fullName>
    <description>Represents error text either received as part of response provided by target system or unavailability of service</description>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>