force-app/main/default/objects/APTS_Integration_Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>APTS_Integration_Repository__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>APTS_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>APTS_Status__c</field>
        <operation>equals</operation>
        <value>Failure</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>