force-app/main/default/objects/APTS_Integration_Transaction__c/listViews/customView.listView-meta.xml
<ListView>
    <fullName>customView</fullName>
    <columns>NAME</columns>
    <columns>APTS_Error_Code_Repository__c</columns>
    <columns>APTS_Integration_Repository__c</columns>
    <columns>APTS_Request_Payload__c</columns>
    <columns>APTS_Request_Timestamp__c</columns>
    <columns>APTS_Response_Payload__c</columns>
    <columns>APTS_Response_Timestamp__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>customView</label>
    <language>en_US</language>
</ListView>